--- a/version-control/slides/slides_version-control.Rmd
+++ b/version-control/slides/slides_version-control.Rmd
@@ -1,9 +1,6 @@
 ---
 title: "Version control with Git"
-subtitle:
-author: "Barbara Vreede"
-institute: "Utrecht University"
-date: "20 November 2019"
+author: "Best Practices for Writing Reproducible Code // part 2"
 output:
   xaringan::moon_reader:
     css: [default, metropolis, metropolis-fonts, 'custom.css']
@@ -13,16 +10,60 @@ output:
       highlightLines: true
       countIncrementalSlides: false
 ---
-
-background-image: url(https://upload.wikimedia.org/wikipedia/commons/b/be/Sharingan_triple.svg)
-
 ```{r setup, include=FALSE}
 options(htmltools.dir.version = FALSE)
 ```
 
-???
 
-Image credit: [Wikimedia Commons](https://commons.wikimedia.org/wiki/File:Sharingan_triple.svg)
+# Why do you need version control?
+
+.pull-left[
+
+- It will help you manage ~~your code~~ most of your files.
+
+- It is like track changes on steroids: it applies to all files in a folder.
+
+- It allows you to trace back your steps: if something breaks, you can figure out what happened.
+
+- NO MORE thesis_final_final_SERIOUSLYFINAL.Rmd
+
+even better:
+- a good version control system allows you to collaborate and share!
+
+]
+
+.pull-right[
+![final](http://www.phdcomics.com/comics/archive/phd101212s.gif)
+]
+---
+background-image: url(slides_version-control_files/figure-html/git.svg)
+background-size: 500px
+background-position: 96% 15%
+
+# What is git?
+.large-left-column[
+- Version Control system written by Linus Torvalds (of Linux fame)
+
+- Allows you to log updates, branch your work (so you can experiment without losing the original!), and keep all backups, while efficiently using your storage
+
+- Open Source software written for the command line...
+
+- ... but many GUI-clients exist nowadays, and most coding IDEs have built-in git.]
+
+---
+# Slide title
+
+Here is text.
+
+---
+# Slide title
+
+Here is text.
+
+---
+# Slide title
+
+Here is text.
 
 ---
 class: center, middle
