R package template added

--- a/code-documentation/slides/code_documentation.Rmd
+++ b/code-documentation/slides/code_documentation.Rmd
@@ -13,6 +13,11 @@ output:
       countIncrementalSlides: false
 ---
 
+__Reproducibility__
+
+__Reusability__
+
+---
 <!-- Armel -->
 
 ## Code documentation
