--- a/slides/code_documentation.Rmd
+++ b/slides/code_documentation.Rmd
@@ -1,17 +1,18 @@
 ---
-title: "Code documentation"
-subtitle: "⚔<br/>Reproducible code workshop."
-author: "Armel Lefebvre, Barbara Vreede"
-institute: "Utrecht University"
-date: "20/11/2019 (updated: `r Sys.Date()`)"
+title: "Code Quality and Documentation"
+author: "Best Practices for Writing Reproducible Code // part 3"
 output:
   xaringan::moon_reader:
+    css: [default, metropolis, metropolis-fonts, 'custom.css']
     lib_dir: libs
     nature:
       highlightStyle: github
       highlightLines: true
       countIncrementalSlides: false
 ---
+```{r setup, include=FALSE}
+options(htmltools.dir.version = FALSE)
+```
 
 __Reproducibility__
 
