--- a/slides/slides_version-control.Rmd
+++ b/slides/slides_version-control.Rmd
@@ -50,8 +50,8 @@ even better:
 
 - ... but many GUI-clients exist nowadays, and most coding IDEs have built-in git.]
 .pull-right-smaller[
-#![git-logo](slides_version-control_files/figure-html/git-logo-small.svg)
-![distributed](slides_version-control_files/figure-html/screenshots/distributed.png)
+#![git-logo](images/git-logo-small.svg)
+![distributed](images/screenshots/distributed.png)
 
 ![git](https://imgs.xkcd.com/comics/git.png)
 ]
@@ -83,11 +83,11 @@ git commit -m "First commit"
 
 1. Go to your github account and add a new repository (click '+', then 'New repository'):
 
-   ![new-repo](slides_version-control_files/figure-html/screenshots/github_add_repo.png)
+   ![new-repo](images/screenshots/github_add_repo.png)
 
 1. Fill out the information for your new repository. DO NOT initialize the repository yet!
 
-  ![initialize](slides_version-control_files/figure-html/screenshots/initialize.png)
+  ![initialize](images/screenshots/initialize.png)
   
 1. Set the origin of your local repository to the URL of your repo on github:
 ```
@@ -131,7 +131,7 @@ git commit src/filename.py anotherfile.txt -m "My commit message"
 ```
 
 NB: don't forget your commit message (try what happens if you do!).
-![repo](slides_version-control_files/figure-html/swcarpentry/git-staging-area.svg)
+![repo](images/swcarpentry/git-staging-area.svg)
 .footnote[
 Image credit:<br />
 Software Carpentries
@@ -226,4 +226,4 @@ git pull
 
 - A book with [all the ins and outs of git](https://www.git-scm.com/book/en/v2) from the git website
 
-![atlassian](slides_version-control_files/figure-html/atlassian/bubblediag.svg)
+![atlassian](images/atlassian/bubblediag.svg)
