--- a/slides/slides_code-quality.Rmd
+++ b/slides/slides_code-quality.Rmd
@@ -17,128 +17,12 @@ options(htmltools.dir.version = FALSE)
 # Code quality defined
 
 .pull-left[
-- Readable
+- Readable (Next part)
 
 - Reusable
 
 - Robust
 ]
-
-.footnote[
-Source: [xkcd](https://xkcd.com/1513/)
-]
-
-.pull-right[
-![goodcode](https://imgs.xkcd.com/comics/good_code.png)
-
-]
-
----
-# Code readability
-
-- Code is for computer, comments are for humans.
-
-
----
-# Code readability
-
-- ~~Code is for computer, comments are for humans.~~
-
-- Use whitespace and newlines strategically.
-
---
-
-#### Compare:
-```r
-this <- function(arg1,arg2){res<-arg1*arg2;return(res)}
-hurts <- mean(c(this(3,4),this(3,1),this(9,9))); print(hurts)
-```
-
-```r
-this <- function(arg1,arg2){
-  res <- arg1 * arg2
-  return(res)
-}
-
-hurts <- mean(
-  c(
-    this(3,4),
-    this(3,1),
-    this(9,9)
-    )
-  )
-print(hurts)
-```
-
-
----
-# Code readability
-
-- ~~Code is for computer, comments are for humans.~~
-
-- Use whitespace and newlines strategically.
-
-- use descriptive names for functions and variables
-  - start functions with a verb
-  - make variable names _just_ long enough to be meaningful
-
---
-
-#### Compare:
-
-```python
-for i in my_shopping_basket:
-  if(test(i)) > 10:
-    purch(i)
-  else:
-    disc(i)
-```
-
-```python
-for item in basket:
-  if(testNecessity(item)) > 10:
-    purchase(item)
-  else:
-    discard(item)
-```
-
-
----
-# Code readability
-
-- ~~Code is for computer, comments are for humans.~~
-
-- Use whitespace and newlines strategically.
-
-- use descriptive names for functions and variables
-  - start functions with a verb
-  - make variable names _just_ long enough to be meaningful
-
-- use a consistent style
-  - consistency will make your code easier to understand and maintain
-  - consult a styleguide for your language (keep conventions, and don't reinvent the wheel)
-  
---
-
-#### Compare:
-
-```r
-myVar<-original_variable+MOD(new.var)
-```
-```r
-my_var <- original_var + Modified(new_var)
-```
----
-# Styleguides
-
-  - Python style manual: [Pep-8](https://www.python.org/dev/peps/pep-0008/)
-  - R style manual: [Tidyverse style guide](https://style.tidyverse.org)
-  
-![codequality](https://imgs.xkcd.com/comics/code_quality.png)
-.footnote[
-Source: [xkcd](https://xkcd.com/1513/)
-]
-
 
 ---
 # Code robustness (part 1)
@@ -208,13 +92,22 @@ Take a look at your code.
 
 - Is there hard coded data or adjustable parameters that you can extract (perhaps in a config file?)
 
-- Would your script be more reusable if you split it into subscripts?
+- Identify a part of your code that you could transform into a function
+  - Make sure you function has parameters
+  - Use those parameters inside the function
+  - Example:
   
-- Finally: read your code. Ignore the comments. 
-  - Is it clear what you mean? What can you rewrite?
-  - Do you have difficulty interpreting variables or function names in your code? Rename them
-  - Are you constructively using whitespace?
-  - What does your styleguide say about CamelCase, separators_like_these or-like-these, etc..? Take a look and see if you can apply some things!
+```{python}
+def my_function(param_a, param_b):
+  if param_b == 99:
+    return None
+  
+  if param_a == 100:
+    do_something(param_a)
+  else:
+    do_something_else(param_a)
+```
+
 
 ---
 # Towards defensive programing
@@ -224,7 +117,7 @@ Take a look at your code.
   - Make use of try/catch mechanisms to manage exceptions
   - Make use of logging tools instead of print functions
 
-- Do not expect users to treat your code like you expected, so expect the worst
+- *About errors* : Do not expect users to treat your code like you expected, so expect the worst
  - use of wrong input values using your functions
  - data types
  - malformed text input
@@ -254,6 +147,93 @@ finally:
   protein_data.to_csv("../data/processed/proteins.csv")
 ```
 ---
+
+# Your turn
+- Modify the code inside your function to
+  - Check the value of the arguments passed to your function using if/else statements
+  - raise an error in case an argument is out of the range of acceptable values
+  - Example (in python)
+  
+```{python}
+def read_vector_value(index=0):
+    my_vector = [10,5,4,12,25]
+    
+    if index > len(my_vector) - 1:
+        raise IndexError('Index cannot be higher than length of the vector ')
+    
+    return my_vector[index]
+```
+  - Example (in R)
+```{R}
+
+```
+---
+# Using the read_vector_value function
+- Good call
+```{python}
+read_vector_value(4)
+```
+
+- Bad call
+```{python, error=TRUE}
+read_vector_value(5)
+```
+
+---
+# So, your script gets interrupted by the error your raised
+```{python, error=TRUE}
+result = read_vector_value(5)
+```
+
+
+```{python, error=TRUE}
+result
+```
+
+---
+# Mmmh... why not a good old if/return?
+
+```{python}
+def read_vector_value_if(index=0):
+    my_vector = [10,5,4,12,25]
+    
+    if index > len(my_vector) - 1:
+        return None
+    
+    return my_vector[index]
+
+print(read_vector_value_if())
+```
+
+- Hard to know if None is an expected value or an error ...
+```{python}
+print(read_vector_value_if(55))
+```
+---
+# You can handle this! With some error management
+
+- Assuming you would like to do something else than interrupt your script when an error is raised
+- Use error management, you can use it to process errors/exceptions raised by functions
+
+```{python, error=TRUE}
+
+try:
+  read_vector_value(5)
+except IndexError as e:
+  print(e)
+
+```
+
+- But what if the wrong exception is handled?
+
+```{python, error=TRUE}
+try:
+  read_vector_value(5)
+except ArithmeticError as e:
+  print(e)
+```
+---
+
 # Unit testing
 Unit testing is a generic testing approach.
 
@@ -292,6 +272,61 @@ __Code editors/IDEs__ such as visual studio code, RStudio, Pycharm...
   ```R
     devtools::test()
   ```
+---
+# Example, testing our read_vector function
 
+```{python}
+import unittest
+class TestStringMethods(unittest.TestCase):
+    def test_retrieval(self):
+        self.assertEqual(read_vector_value(0), 10)
+    
+    def test_error(self):
+        with self.assertRaises(IndexError):
+            read_vector_value(5)
 
+```
 
+- Normal call
+
+```{python, eval=FALSE}
+unittest.main()
+```
+
+---
+# With a Jupyter notebook
+
+- Notebook call
+
+```{python}
+unittest.main(argv=['trick to make it work in a notebook'], exit=False)
+```
+
+---
+# Making a test fail
+```{python}
+import unittest
+class TestStringMethods(unittest.TestCase):
+    def test_retrieval(self):
+        self.assertEqual(read_vector_value(0), 10)
+    
+    def test_error(self):
+        with self.assertRaises(IndexError):
+            read_vector_value(5)
+            
+    def test_retrieval_wrong(self):
+        self.assertEqual(read_vector_value(0), 11)
+
+```
+---
+#Result of faulty test
+
+```{python, echo=FALSE}
+unittest.main(argv=['trick to make it work'], exit=False)
+```
+---
+# Your turn
+- Write a unit test for your function
+- Does your function behave like you want?
+- Can you make your function raise unforseen errors/exceptions?
+- Inspect R and python documentation to get acquainted with different assertions (e.g., assertEqual)
